# nptsne

./: .gitignore  .gitmodules  .readthedocs.yaml  .readthedocs.yml  .travis.yml  BUILD.md  BUILD.txt  CMakeLists.txt  DESCRIPTION.md  MANIFEST.in  README.md  appveyor.yml  build.py  cert.pem  cleanup.bat  cleanup.sh  cmake_utils.py  conanfile.py  get_git_derived_build_number.py  index.html  pyproject.toml  requirements.txt  setup.cfg  setup.py  upload.py  version.txt
.ci/: cleanprevbuild.bat  cleanprevbuild.sh  cleanwheelhouse.bat  entry.sh  install.sh  prepare_build_linux.sh  prepare_conan.sh  run.sh  setup.bat  setup_linux.sh  setup_macos.sh  setup_windows.bat
.github/workflows/: wheels.yml
_package/: MANIFEST.in  setup.py
_package/docs/: README.md
_package/nptsne/: __init__.py  version.py
_package/nptsne/hsne_analysis/: __init__.py  analysis_model.py  analysis_tree.py
build_infrastructure/: README.md
build_infrastructure/docker-qt-centos/: Dockerfile  Libraries for CentOS.txt  create-user.sh  docker-build-static.sh  docker-build.sh  docker-run-qtcreator.sh  docker-run-shell.sh  docker-start-qtcreator.sh  docker-start-shell.sh
build_infrastructure/docker-qt-centos/docker_qt_conda/: Dockerfile  docker-run-shell.sh  docker-start-shell.sh  docker_build.sh
build_infrastructure/docker-qt-ubuntu/: Dockerfile  build_qt.sh  build_qt_static.sh  create-user.sh  docker-build.sh  docker-run-qtcreator.sh  docker-run-shell.sh  docker-start-qtcreator.sh  docker-start-shell.sh
build_infrastructure/docker-qt-ubuntu/docker_qt_conda/: Dockerfile  docker-run-shell.sh  docker-start-shell.sh  docker_build.sh
cmake/: ConanInstall.cmake  ConanSetup.cmake  README.txt  UploadWheel.cmake  conan.cmake
cmake/setuptools/: cmake_utils.py
demos/: GETTING_MNIST.txt  unpack_data.py
demos/BasicHSNEDemo/: AnalysisGui.py  ModelGui.py  README.md  hsnedemo.py  requirements.txt
demos/DIstanceMatrix/: test_dist.py
demos/DocTest/: README.txt  run_doctest.py
demos/ExtendedHSNEDemo/: AnalysisController.py  CompositeImageViewer.py  ConfigClasses.py  DemoConfig.py  EmbeddingGui.py  HyperspectralImageViewer.py  MetaDataViewer.py  ModelController.py  ModelGui.py  README.md  cursors.py  hsnedemo.py  requirements.txt
demos/HSNEDemo/: AnalysisGui.py  MetaDataViewer.py  ModelGui.py  hsnedemo.py
demos/HSNELouvainDemo/: README.md  requirements.txt  testhsnelouvain.py
demos/TSNEJupyterNotebook/: NPTSNE_notebooktests.ipynb  requirements.txt
demos/TextureTsne/: README.txt  requirements.txt  test.py
demos/TextureTsneExtended/: README.txt  requirements.txt  testtextureextended.py
dist_root/: MANIFEST.in  cmake_utils.py  setup.py
dist_root/docs/: PyPI_README.md
dist_root/nptsne/: __init__.py
dist_root/nptsne/hsne_analysis/: analysis_model.py
doc/: Makefile  README.md  requirements.txt
doc/source/: ReleaseNotes.rst  citation.rst  conf.py  download.rst  index.rst  license.rst  nptsne.rst
doc/source/changelogs/: v0.2.0.rst  v1.0.0rc1.rst
docs/: .buildinfo  Makefile  README.md  ReleaseNotes.html  ReleaseNotes.rst  appendix.rst  background.html  citation.html  citation.rst  codingtips.rst  conf.py  demos.rst  download.html  genindex.html  index.html  index.rst  install.rst  license.html  make.bat  modules.html  nptsne.html  nptsne.rst  objects.inv  requirements.txt  roadmap.html  roadmap.rst  search.html  searchindex.js  usage.html  usage.rst
docs/.doctrees/: ReleaseNotes.doctree  citation.doctree  download.doctree  environment.pickle  index.doctree  license.doctree  modindex.doctree  nptsne.doctree  py-modindex.doctree
docs/.doctrees/changelogs/: v0.1.1a1 - Copy.doctree  v0.1.1a1.doctree  v0.2.0 - Copy.doctree  v1.0.0rc1.doctree
docs/_sources/: ReleaseNotes.rst.txt  background.rst.txt  download.rst.txt  index.rst.txt  modules.rst.txt  usage.rst.txt
docs/_sources/changelogs/: v0.1.1a1.rst.txt  v0.2.0 - Copy.rst.txt  v0.2.0.rst.txt  v1.0.0rc1.rst.txt
docs/_static/: documentation_options.js
docs/changelogs/: v0.1.1a1 - Copy.html  v0.1.1a1.html  v0.1.1a1.rst  v0.2.0 - Copy.html  v0.2.0.html  v1.0.0.rst  v1.0.0rc1.html  v1.1.0.rst  v1.1.0.rst.inc  v1.2.0.rst  v1.2.0.rst.inc  v1.2.0aX.rst.inc  v1.3.0.rst.inc
docs/html/: genindex.html  license.html  modindex.html  objects.inv
docs/source/: conf.py  index.rst
docsource/: README.md  copy_generated_to_nptsnedoc.bat  requirements.txt  run_sphinx.bat  sphinx_rst_build.bat
docsource/source/: ReleaseNotes.rst  citation.rst  conf.py  index.rst  nptsne.rst  nptsne_module.rst  usage.rst
examples/: NPTSNE_notebooktests.ipynb  nptsne TextureTsne example.ipynb
nptsne_src/: .editorconfig  Analysis.cpp  Analysis.h  HSne.cpp  HSne.h  KnnAlgorithm.h  LibInfo.cpp  OffscreenBuffer.h  SparseTsne.cpp  SparseTsne.h  TextureTsne.cpp  TextureTsne.h  TextureTsneExtended.cpp  TextureTsneExtended.h  Types.h  deploy__init__.py  nptSNEBind.cpp  version.py
nptsne_src/docs/: README.md
nptsne_src/glad/: glad_3_3.h
src/: KnnAlgorithm.h  LibInfo.h  TextureTsne.cpp  TextureTsne.h  TextureTsneExtended.cpp  TextureTsneExtended.h  nptSNEBind.cpp
src/cpp/: Analysis.cpp  Analysis.h  EmbedderType.h  HSne.cpp  HSne.h  KnnAlgorithm.cpp  KnnAlgorithm.h  TextureTsne.cpp  TextureTsne.h  TextureTsneExtended.cpp  TextureTsneExtended.h  Types.h  nptSNEBind.cpp  nptsnebind_link.rst
src/docs/: README.md
src/nptsne/: __init__.py  __init__.pyi  _branch_name.txt  _full_version.txt  _version.txt  example.py  version.py
src/nptsne.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/py/: __init__.py  setup.py
test/: AnalysisGui.py  ModelGui.py  hsnedemo.py  hsnetest.py  run_doctest.py  test.py  testhsnelouvain.py  testtexture.py  testtextureextended.py  testtextureextendedfromnumpy.py
test/HSNEDemo/: cursors.py
test/features/: README.txt  TextureTsneAPI.feature  TextureTsneExtendedAPI.feature  environment.py
test/newdemo/: AnalysisController.py  DemoConfig.py  EmbeddingGui.py  HyperspectralImageViewer.py  MetaDataViewer.py  ModelController.py  ModelGui.py
tools/: README.txt  __init__.py  cmake_utils.py  version_util.py
(+13 files in other folders)
