[build-system]
requires = [
    "setuptools >= 42",
    "wheel",
    "cmake >= 3.15.0",
    "conan == 1.41.0",
    "packaging",
    "gitpython"
]

[tool.cibuildwheel]
build = "cp38-*"
test-command = "python {project}/test/run_doctest.py"
build-verbosity = 0
archs = "auto64"
skip = "cp2* pp*"

[tool.cibuildwheel.windows]
before-build = ".ci\\setup_windows.bat {project}"

[tool.cibuildwheel.linux]
# The manylinux image needs to match the conan profile
# 2010 is gcc 8
manylinux-x86_64-image = "manylinux2010"
before-build = [
    "chmod +x .ci/setup_linux.sh",
    ".ci/setup_linux.sh {project}"
]
repair-wheel-command = [
    "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/tmp/cibwlibsdir",
    "echo 'Lib path for repair $LD_LIBRARY_PATH'",
    "auditwheel repair -w {dest_dir} {wheel}"
]

[tool.cibuildwheel.macos]
before-build = [
    "chmod +x .ci/setup_macos.sh",
    ".ci/setup_macos.sh {project}"
]
repair-wheel-command = [
    "export DYLD_LIBRARY_PATH=$DYLD_LIBRARY_PATH:$TMPDIR/cibwlibsdir",
    "echo 'Lib path for repair $DYLD_LIBRARY_PATH'",
    "delocate-listdeps {wheel} && delocate-wheel --require-archs x86_64 -w {dest_dir} {wheel}"
]
